--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
             <br><br>
             <label class="turnLabel">Answer Turn - <span id="answerTurn"></span></label>
             <br><br>
+            <div id="output"><div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
                 <div class="form-group">
                     <label>Number 1:</label>
@@ -40,6 +41,8 @@
                     <input type="text" id="number2" class="form-control" placeholder="Number2">
                 </div>
             </div>
+            <button onclick="enter()" class="btn btn-info send">Send</button>
         </center>
+        <script src="game.js"></script>
     </body>
 </html>
